--- a/20-03/lesson5_20-03/style.css
+++ b/20-03/lesson5_20-03/style.css
@@ -44,4 +44,40 @@ input {
     border: 2px solid teal;
     padding: 8px;
     margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.delete_button {
+    width: 150px;
+    height: 40px;
+    border: 2px solid white;
+    cursor: pointer;
+    background: darkred;
+    font-size: 20px;
+    border-radius: 20px;
+    color: white;
+}
+
+.edit_button {
+    background: yellow;
+    width: 150px;
+    height: 40px;
+    border: 2px solid white;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 20px;
+    color: white;
+}
+
+h3 {
+    font-size: 28px;
+    font-family: 'Franklin Gothic Heavy';
+}
+
+.buttons_div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 320px;
 }
