--- a/21-01/lesson8_21-01/css/style.css
+++ b/21-01/lesson8_21-01/css/style.css
@@ -15,4 +15,27 @@ body {
     height: 300px;
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2 {
+    text-align: center;
+    color: red;
+    font-size: 50px;
+}
+
+button {
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.head {
+    width: 32px;
+    height: 32px;
 }
